<resources>
    <string name="app_name">SURGE</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="mobile">Mobile Number</string>
    <string name="textView_card_carddetails">Card Details</string>
    <string name="button_card_confirmpay">Confirm and Pay</string>
    <string name="imageView_card_cardimg">Card Image</string>
    <string name="button_card">Add Card</string>
    <string name="Update">ID</string>
    <string name="Update2">Cloth Type</string>
    <string name="Update3">Size</string>
    <string name="Update4">Colour</string>
    <string name="Update5">Price</string>
    <string name="Update6">Update</string>
    <string name="back">Back</string>
    <string name="buttonAdd">Add </string>
    <string name="buttonDelete">Delete </string>
    <string name="textView_card_paycard">Payment Card</string>
    <string name="textView_card_mastervisa">Mastercard/Visa</string>
    <string name="button_buyitnow">Buy It Now</string>
    <string name="button_buyinfo_save">Save</string>
    <string name="textView_buyinfo_paymethod">Payment Method</string>
    <string name="button_buyinfo_card">Add Credit/Debit Card</string>
    <string name="button_card_save">Save</string>
    <string name="textView_card_desc">Surge uses industry-standard encryption to protect the confidentiality of your personal information</string>
    <string name="button_card_checkout">Checkout</string>
    <string name="textView_checkout_details">Shipment Details</string>
    <string name="button_checkout_confirmpay">Confirm and Pay</string>
    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="textView_buyinfo_addshipment">Add Shipment Details</string>
    <string name="editText_buyinfo_name">Name</string>
    <string name="editText_buyinfo_phone">Phone</string>
    <string name="editText_buyinfo_email">Email</string>
    <string name="editText_buyinfo_address">Address</string>
    <string name="textView_checkout">Checkout</string>
    <string name="textView_checkout_carddetails">Card Details</string>
    <string name="textView_checkout_buyinfo">Shipment Details</string>
    <string name="button_checkout_delete">Delete</string>
    <string name="button_checkout_update">Update</string>
    <string name="button_buyinfo_next">Next</string>
    <string name="textView_editbuyinfo_editshipment">Edit Shipment Details</string>
    <string name="editText_editbuyinfo_name">Name</string>
    <string name="editText_editbuyinfo_phone">Phone</string>
    <string name="editText_editbuyinfo_email">Email</string>
    <string name="editText_editbuyinfo_address">Address</string>
    <string name="uploadImages">Set your image</string>
    <string name="action_pic">Pictures</string>
    <string name="button_editbuyinfo_save">Save</string>
    <string name="item1Description">Men\'s Dark Green T-shirt</string>
    <string name="item2Description">Men\'s Grey T-shirt</string>
    <string name="item3Description">Men\'s Blue Dual Tone T-shirt</string>
    <string name="item4Description">Men\'s shoes</string>
    <string name="item5Description">Men\'s Silver Watch</string>
    <string name="item6Description">Men\'s Black Belt</string>

</resources>
