<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic5_a"
    tools:context=".AboutMe">

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="93dp"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="132dp"
        android:background="#C9CCCF"
        android:text="@string/name"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="512dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/buttonstyle3"
        android:text="Update"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_remove"
        android:layout_width="272dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/buttonstyle3"
        android:text="Remove My ACC"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_update"
        app:layout_constraintVertical_bias="0.224" />

    <TextView
        android:id="@+id/txt_mobile"
        android:layout_width="135dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:background="#C9CCCF"
        android:text="@string/mobile"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="93dp"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="#BDBDC9"
        android:text="@string/email"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <EditText
        android:id="@+id/name2"
        android:layout_width="224dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="left"
        android:inputType="textPersonName"
        android:textColor="@color/colorText"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="176dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/pacifico"
        android:text="About Me"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView_dp"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_logpassword"
        android:layout_width="109dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#C9CCCF"
        android:text="@string/password"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_mobile" />

    <EditText
        android:id="@+id/email2"
        android:layout_width="219dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="left"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorText"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_email"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/mobileNo2"
        android:layout_width="223dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="left"
        android:inputType="phone"
        android:textColor="@color/colorText"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_mobile"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="219dp"
        android:layout_height="58dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="left"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_logpassword"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView_dp"
        android:layout_width="118dp"
        android:layout_height="107dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/pp" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="94dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"

        android:background="@color/colorPrimary"
        android:text="Upload"
        android:textColor="#064969"
        android:textCursorDrawable="@drawable/buttonstyle3"
        app:layout_constraintBottom_toTopOf="@+id/name2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_dp"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>